--- a/springcloud-ribbon/src/main/resources/application.yml
+++ b/springcloud-ribbon/src/main/resources/application.yml
@@ -19,4 +19,4 @@ eureka:
 eureka-ribbon:
   ribbon:
     listOfServers: localhost:8081,localhost:8082  #配置Ribbon能访问 的微服务节点，多个节点用逗号隔开
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule; #配置Ribbon负载均衡策略
+    #NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule; #配置IRule的实现类
