--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>springcloud-client01</module>
 		<module>springcloud-client02</module>
 		<module>springcloud-feign</module>
+		<module>springcloud-zuul</module>
 	</modules>
 
 	<properties>
